Remove wlr_output_layout_move or remove error loging in wlr_output_layout_move
Created by: VincentVanlaer
wlr_output_layout_add
can also move outputs. The only difference between move
and add
is that move
will error when the output is not in the layout. This function is only useful if a compositor does not track whether an output is in the layout and still has ways to move it at runtime. If we want to keep wlr_output_layout_move
, then we should remove the error at https://github.com/swaywm/wlroots/blob/master/types/wlr_output_layout.c#L283. In order to avoid the error the compositor needs to know if the output is in the layout or not, which defeats the purpose of wlr_output_layout_move
.